...

    <string name="diary_create_message">What was good about today?</string>
    <string name="diary_create_message_supplement">What else was good about today?</string>

    <string name="kindness_create_categories_message">Choose a type of kindness for today. Try and pick each type at least once per week!</string>
    <string name="kindness_create_categories_please_message">You must go back and select a type of kindness for today.</string>
    <string name="kindness_create_words_message">Choose a way to say something kind to someone today</string>
    <string name="kindness_create_thoughts_message">Choose a way to think something kind about someone today</string>
    <string name="kindness_create_actions_message">Choose a way to do something nice for someone today</string>
    <string name="kindness_create_self_message">Choose a way to be kind to yourself today</string>

    <string name="missing_entry_error_toast_text">Cannot find Entry</string>
    <string name="dialog_delete_entry">Are you sure you want to delete this entry?</string>
    <string name="ok_delete_entry">OK</string>
    <string name="cancel_delete_entry">Cancel</string>

    <string name="dialog_kindness_reminder">Would you like to pick a way to be kind today?</string>
    <string name="ok_kindness_reminder">Yes, be kind</string>
    <string name="cancel_kindness_reminder">Maybe Later</string>

    <string name="empty_diary_entry_error_toast_text">You should enter 5 things</string>

    <string name="empty_kindness_error_toast_text">You should select one option on each screen</string>

    <string name="kindness_back_button_text">Back</string>
    <string name="kindness_next_button_text">Next</string>
    <string name="kindness_cancel_button_text">Cancel</string>
    <string name="kindness_done_button_text">I\'m done</string>

    <string name="kindness_card_image_description">Depiction of kindness type (say, think, do or self)</string>
    <string name="kindness_card_image_description_words">Saying something kind</string>
    <string name="kindness_card_image_description_thoughts">Thinking something kind</string>
    <string name="kindness_card_image_description_actions">Doing something kind</string>
    <string name="kindness_card_image_description_self">Being kind to yourself</string>
...
    <string name="kindness_categories_thoughts">Think something kind about someone today</string>
    <string name="kindness_categories_actions">Do something nice for someone today</string>
    <string name="kindness_categories_self">Be kind to yourself today</string>

    <string name="kindness_words_appearance">Compliment someone\'s physical appearance, hair, clothes, etc.</string>
    <string name="kindness_words_skills">Compliment someone\'s skills (driving, conversation, calmness, writing etc.)</string>
    <string name="kindness_words_abilities">Compliment someone on how well they coped with something or achieved something</string>
    <string name="kindness_words_love">Tell someone you love something you love about them</string>
    <string name="kindness_words_thanks">Say thank you to someone who\'s helped you</string>
    <string name="kindness_words_call">Call someone in your family or a distant friend</string>
    <string name="kindness_words_other">Other</string>

    <string name="kindness_thoughts_wishes">To everyone you meet (EVERYONE!), wish them well when you see them</string>
    <string name="kindness_thoughts_doubt">Give someone the benefit of the doubt</string>
    <string name="kindness_thoughts_forgive">Forgive someone for behaving poorly in the past</string>
    <string name="kindness_thoughts_success">Think about how well someone is doing something</string>
    <string name="kindness_thoughts_listen">Listen, I mean really listen, to what someone is telling you</string>
    <string name="kindness_thoughts_gossip">Be mindful in not joining in with gossip about someone</string>
    <string name="kindness_thoughts_other">Other</string>

    <string name="kindness_actions_door">Open a door for someone</string>
    <string name="kindness_actions_assist">Help someone who looks like they are struggling</string>
    <string name="kindness_actions_traffic">Let someone in the traffic ahead of you</string>
    <string name="kindness_actions_walk">Walk your elderly neighbour\'s dog</string>
    <string name="kindness_actions_litter">Pick a piece of discarded rubbish out of someone\'s garden</string>
    <string name="kindness_actions_cake">Take cakes to work</string>
    <string name="kindness_actions_help">Ask your partner if you can help with anything</string>
    <string name="kindness_actions_thanks">Send someone a thank you card</string>
    <string name="kindness_actions_buy">Buy a parking ticket for the next person</string>
    <string name="kindness_actions_other">Other</string>

    <string name="kindness_self_compliment">Hear yourself say something nice about yourself today</string>
...
    <string name="kindness_self_generous">Notice the kind things you do for other people</string>
    <string name="kindness_self_forgive">Allow yourself to forgive yourself for something you think you should have done better</string>
    <string name="kindness_self_kind">Notice when you are unkind to yourself, and change the thought to a more helpful one</string>
    <string name="kindness_self_accept">Allow someone to help you (take up that offer of help they gave last week!)</string>
    <string name="kindness_self_class">Join a class</string>
    <string name="kindness_self_volunteer">Find somewhere to volunteer a couple of hours a week</string>
    <string name="kindness_self_movie">If you never stop - watch a movie</string>
    <string name="kindness_self_active">If you aren\'t active - do 20 minutes of activity today</string>
    <string name="kindness_self_hobby">Allow yourself time for your hobby or take up a new one</string>
    <string name="kindness_self_walk">Go for a walk</string>
    <string name="kindness_self_cook">Cook a good meal</string>
    <string name="kindness_self_date">Start to organise going out with a friend</string>
    <string name="kindness_self_nature">Lay in the grass or on a beach looking at nature</string>
    <string name="kindness_self_read">Read a book</string>
    <string name="kindness_self_laugh">Make someone else laugh</string>
    <string name="kindness_self_draw">Draw</string>
    <string name="kindness_self_other">Other</string>

    <string-array name="kindness_categories_array">
        <item >@string/kindness_categories_words</item>
        <item >@string/kindness_categories_thoughts</item>
        <item >@string/kindness_categories_actions</item>
...
