<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/kindness_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/KindnessInstructionText" />

    <ListView
        android:id="@+id/kindness_list"
        android:choiceMode="singleChoice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>