<?xml version="1.0" encoding="utf-8"?>
<com.hedgehogproductions.therapyguide.editkindnessentry.KindnessItemLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true" >

    <RadioButton
        android:id="@+id/kindness_item_selector"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:clickable="false"
        android:focusable="false"/>

    <TextView
        android:id="@+id/kindness_item_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical" />

</com.hedgehogproductions.therapyguide.editkindnessentry.KindnessItemLayout>